Sun Jul 31 21:09:04 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (node_name.inc): Use $(Q) for consistency.

	* Makefile.in (INSNS): ditto.

Sun Jul 31 21:19:51 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/mkmf.rb (configuration:ECHO1): Same as the recent fix in
	  common.mk.
	  ":" in a make variable replacement cause a syntax error with
	  /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

Sun Jul 31 20:39:12 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (ECHO1): nmake does not allow parenthesis in make variable
	  replacement.

Sun Jul 31 23:06:57 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (check_env): print debug messages to stderr.
	[Feature #4871] [ruby-dev:43743]

Sun Jul 31 22:50:23 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (vm_make_env_each): don't save prev env value.
	It is no longer used. [Feature #4871] [ruby-dev:43743]

	* vm.c (check_env): changed accordingly.

Sun Jul 31 20:21:36 2011  "Yuki Sonoda (Yugui)"  <yugui@yugui.jp>

	* common.mk (ECHO1): ":" in a make variable replacement cause a syntax
	  error with /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

	* configure.in (NULLCMD): new check.

	* Makefile.in (NULLCMD): Reflects checking in configure.

	* win32/Makefile.sub (NULLCMD): new assignment.

Sun Jul 31 18:58:59 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_pipe): pipe on cygwin can succeed half but fail
	  half.

Sun Jul 31 11:31:07 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c: check if cfp is valid. [Bug #5083] [ruby-dev:44208]

Sun Jul 31 09:18:28 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 3.9.  Fixed `ri []`, stopdoc creating an
	  object reference, nodoc for class aliases, verbatim === lines.

Sun Jul 31 01:29:08 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_each_byte): remove unused variable e.

Sat Jul 31 01:23:45 2011  Kenta Murata  <mrkn@mrkn.jp>
