@@ -14,6 +14,10 @@
 #include <math.h>
 #include <errno.h>
 
+#if defined(HAVE_SIGNBIT) && defined(__GNUC__) && defined(__sun__)
+    extern int signbit(double x);
+#endif
+
 #define numberof(array) (int)(sizeof(array) / sizeof((array)[0]))
 
 VALUE rb_mMath;
